# chatbot-gui

./: .gitignore  README.md  app.py  pyproject.toml
agents/: graph.py  nodes.py  prompt.py  state.py
components/: init_page.py  renderer.py  session.py  stream.py
src/agents/: graph.py  nodes.py  prompt.py  state.py  ui_tools.py
src/styles/: background.py  fadein.py  style_loader.py
styles/: background.py  style_loader.py
tools/: ui_tools.py
